// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta-alarm-rule-form Renders \`meta-alarm-rule-form\` with custom props 1`] = `
<div
  class="layout gap-3 column"
>
  <c-enabled-field-stub
    hide-details=""
    value="true"
    with-background=""
  />
  <div
    patterns-label="Pattern and params"
    type="8"
    value="[object Object]"
  >
    <meta-alarm-rule-general-form-stub
      disabledidfield="true"
      form="[object Object]"
      templatevars="[object Object]"
    />
    <meta-alarm-rule-parameters-form-stub
      form="[object Object]"
      templatevars="[object Object]"
    />
  </div>
</div>
`;

exports[`meta-alarm-rule-form Renders \`meta-alarm-rule-form\` with default props 1`] = `
<div
  class="layout gap-3 column"
>
  <c-enabled-field-stub
    hide-details=""
    with-background=""
  />
  <div
    patterns-label="Pattern and params"
    type="8"
    value="[object Object]"
  >
    <meta-alarm-rule-general-form-stub
      form="[object Object]"
      templatevars="[object Object]"
    />
    <meta-alarm-rule-parameters-form-stub
      form="[object Object]"
      templatevars="[object Object]"
    />
  </div>
</div>
`;
